--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -49,6 +49,7 @@ body{
     header{
         background: url(../Assets/Background.png) no-repeat center;
         background-size: cover;
+        min-width: 100%;
     }
 
     .header{
