--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -12,6 +12,7 @@ body{
 // Container
 .container{
     min-height: 100vh;
+    width: 100vw;
     // General Styles
     & > * {
         width: 100%;
