--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 html {
-  box-sizing: border-box;
   font-size: 16px;
   overflow-x: hidden;
+  box-sizing: border-box;
 }
 
 body {
@@ -53,6 +53,7 @@ body {
 .container header {
   background: url(../Assets/Background.png) no-repeat center;
   background-size: cover;
+  min-width: 100%;
 }
 .container .header {
   text-align: center;
