--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -3,6 +3,7 @@
 html{
     font-size: 16px;
     overflow-x: hidden;
+    box-sizing: border-box;
 }
 body{
     font-family: 'Readex Pro', sans-serif;
