--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,13 @@ body {
 .container ul {
   list-style: none;
 }
+.container a {
+  text-decoration: none;
+  color: #fff;
+}
+.container a:visited {
+  color: #fff;
+}
 .container .btn {
   display: inline-block;
   padding: 1.2em;
@@ -46,6 +53,9 @@ body {
   color: #111;
   opacity: 0.7;
 }
+.container h1 {
+  font-size: clamp(1.75em, 5vw, 3em);
+}
 .container .header, .container .main, .container .footer {
   max-width: 75em;
   margin: 0 auto;
@@ -67,43 +77,49 @@ body {
   align-items: center;
   justify-content: space-between;
 }
-.container .header nav .navbar .toggle-menu {
-  cursor: pointer;
-  display: none;
-}
-@media screen and (max-width: 600px) {
-  .container .header nav .navbar .toggle-menu {
-    display: flex;
-  }
-}
-@media screen and (max-width: 600px) {
-  .container .header nav .navbar {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-  }
-}
-.container .header nav .navsub {
+.container .header nav #nav-links {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: none;
-  gap: 2em;
+  justify-content: center;
+  position: absolute;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.534);
+  top: 4em;
+  width: 100%;
+  color: #fff;
   display: none;
-  transition: all 0.5s ease-in-out;
-  left: -100%;
 }
-@media screen and (min-width: 600px) {
-  .container .header nav .navsub {
+.container .header nav #nav-links ul {
+  padding-left: 0;
+}
+@media (min-width: 600px) {
+  .container .header nav #nav-links ul {
     display: flex;
-    left: 0;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
   }
 }
-@media screen and (max-width: 600px) {
-  .container .header nav {
-    flex-direction: column;
+@media (min-width: 600px) {
+  .container .header nav #nav-links {
+    all: inherit;
+    display: flex;
+  }
+}
+.container .header nav #nav-links.active {
+  display: flex;
+}
+.container .header nav .navsub {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 1em;
+}
+@media (max-width: 600px) {
+  .container .header nav .navsub img {
+    filter: brightness(0) invert(1);
   }
 }
 @media screen and (max-width: 600px) {
@@ -113,6 +129,23 @@ body {
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    gap: 1em;
+  }
+}
+.container .header nav #toggle-menu {
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
+  display: none;
+}
+@media screen and (max-width: 600px) {
+  .container .header nav #toggle-menu {
+    display: flex;
+  }
+}
+@media (max-width: 600px) {
+  .container .header nav {
+    padding: 1.5em 1.5em 10em 1.5em;
   }
 }
 .container .header__text {
