--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -25,6 +25,13 @@ body{
     ul{
         list-style: none
     }
+    a{
+        text-decoration: none;
+        color: #fff;
+        &:visited{
+            color: #fff
+        }
+    }
     .btn{
         @include btn();
         color: #fff;
@@ -40,6 +47,9 @@ body{
     p{
         color: $Primary;  
         opacity: .7;
+    }
+    h1{
+        font-size: clamp(1.75em, 5vw, 3em);
     }
     .header, .main, .footer{
         max-width: 75em;
@@ -61,61 +71,72 @@ body{
         // Nav
         nav{
             @include flex(row, space-between);
-            
+        
+            // Links
+            #nav-links{
+                @include flex(row, center);
+                position: absolute;
+                left: 0;
+                background-color: rgba(0, 0, 0, 0.534);
+                top: 4em;
+                width: 100%;
+                color: #fff;
+                display: none;
 
-            .navbar{
+                ul{
+                    padding-left: 0;
 
-                .toggle-menu{
-                    cursor: pointer;
-                    display: none;
-
-                    @media screen and (max-width:600px){
-                        display: flex;
+                    @media (min-width:600px) {
+                        @include flex(row, flex-start);
                     }
                 }
-
-
-                @media screen and (max-width:600px){
-                    width: 100%;
-                    @include flex(row, space-between);
+                @media (min-width:600px) {
+                    all: inherit;
+                    display: flex;  
                 }
-            }
 
-            .navsub{
-                @include flex(row, none);
-                gap: 2em;
-                display: none;
-                transition: all .5s ease-in-out;
-                left: -100%;
-
-                @media screen and (min-width: 600px) {
+                &.active{
                     display: flex;
-                    left: 0;
                 }
-
-                // Responsive Toggle Menu
-
-                // @media screen and (max-width:600px) {
-                //     @include flex(column, center);
-                //     color: #fff;
-                //     width: 100%;
-                //     border: .11em solid rgba($color: #000000, $alpha: .75);
-                //     padding: 1.5em;
-                //     background: url(../Assets/Background.png);
-                // }
             }
-
-            @media screen and (max-width:600px) {
-                flex-direction: column;
+            .navsub{
+                @include flex(column, flex-start);
+                gap: 1em;
+                img{
+                    @media (max-width:600px) {
+                        filter: brightness(0) invert(1);
+                    }
+                }
             }
-
+            // List items
+           
             li{ 
                 @media screen and (max-width:600px){
                     width: 100%;
                     @include flex(row, center);
+                    gap: 1em;
                 }
             }
+
+            //Hamburger Menu 
+            #toggle-menu{
+                cursor: pointer;
+                border: none;
+                background-color: transparent;
+                display: none;
+
+                @media screen and (max-width:600px){
+                    display: flex;
+                }
+            }
+
+            // Navbar Media Query
+            @media (max-width:600px) {
+                padding: 1.5em 1.5em 10em 1.5em;
+            }
         }
+        // End of navbar
+
         // Text
         &__text{
             padding: 2em;
